cmake_minimum_required(VERSION 3.31)
project(middle-exam C)

set(CMAKE_C_STANDARD 11)

add_executable(FPLDLW25638FTP90 FPLDLW25638FTP90.c)
add_executable(FPLDLW25638FTP126 FPLDLW25638FTP126.c)
add_executable(FPLDLW25638FTP163 FPLDLW25638FTP163.c)
add_executable(FPLDLW25638FTP197 FPLDLW25638FTP197.c)
add_executable(FPLDLW25638FTP48 FPLDLW25638FTP48.c)
